Java 8 compatibility
Update code and source/target version