@@ -6,6 +6,7 @@ import io.github.znetworkw.znpcservers.exception.CommandPermissionException;
 import org.bukkit.entity.Player;
 
 import java.lang.reflect.Method;
+import java.util.Collections;
 import java.util.List;
 
 public class CommandTabInvoker {
@@ -21,8 +22,10 @@ public class CommandTabInvoker {
 
     public List<String> tabComplete(CommandSender sender, Object command) throws CommandException {
         // Check if the sender is not a player
-        if (!(sender.getCommandSender() instanceof Player player))
+        if (!(sender.getCommandSender() instanceof Player))
             throw new CommandException("Only players may execute this command.");
+
+        final Player player = (Player)sender.getCommandSender();
 
         // Check if the permission is not empty and the player does not have the permission
         if (this.permission.length() > 0 && !player.hasPermission(this.permission))
@@ -31,11 +34,12 @@ public class CommandTabInvoker {
         try {
             // Command Tab execution
             Object invoke = this.commandTabMethod.invoke(this.command, sender, command);
-            if (invoke instanceof List<?> list) return ((List<String>) list);
+            if (invoke instanceof List<?>)
+                return ((List<String>) invoke);
         } catch (IllegalAccessException | ClassCastException | java.lang.reflect.InvocationTargetException e) {
             throw new CommandExecuteException(e.getMessage(), e.getCause());
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 }
